# auto-FOX-data

./: .gitattributes  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  NOTICE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yaml  pythonpackage.yml
FOXdata/: __init__.py  __version__.py
FOXdata/armc/: __init__.py  armc.hdf5
FOXdata/armcpt/: __init__.py
tests/: h5py_data.yaml  test.py  test_package.py
